@@ -108,6 +108,10 @@ Dist::Zilla::Plugin::Prereqs::MatchInstalled = 0
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
 
+CHI                                  = 0
+CHI::Driver::FastMmap                = 0
+Cache::FastMmap                      = 0
+
 CPAN::Meta                           = 0
 CPAN::Meta::Prereqs::Diff            = 0
 CPAN::Changes::Group::Dependencies::Stats = 0
