@@ -1,6 +1,11 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 2.016005
+ [Added / runtime recommends]
+ - CHI
+ - CHI::Driver::FastMmap
+ - Cache::FastMmap
+
  [Added / test recommends]
  - CPAN::Meta::Prereqs 2.142060
 
