@@ -1,6 +1,11 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.016005
+ [Added / runtime recommends]
+ - CHI
+ - CHI::Driver::FastMmap
+ - Cache::FastMmap
+
  [Added / test recommends]
  - CPAN::Meta::Prereqs 2.142060
 
